# budoux-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: cli.rs
src/: lib.rs  models.rs  parser.rs
src/models/: ja.rs  mod.rs  th.rs  zh_hans.rs  zh_hant.rs
