[package]
name = "budoux-rs"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust implementation of BudouX"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/yu7400ki/budoux-rs"

[features]
default = []
ja = []
zh-hans = []
zh-hant = []
th = []

[dependencies]

[build-dependencies]
serde_json = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[[example]]
name = "cli"
